--- a/public/style.css
+++ b/public/style.css
@@ -5,64 +5,36 @@
     box-shadow: 1px 2px 10px 1px #f5f5f5;
 }
 
-.container {
-    padding: 1rem;
-    margin: 1rem 0rem;
-}
-
-.backgroundImage {
-    height: 100vh;
-    background-image: url('./529615.jpg');
-    background-repeat: no-repeat;
-}
-
 .navbar {
     display: grid;
-    place-self: center;
-    margin-right: 30%;
-}
-
-.navbar .align {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    place-items: center;
-    padding: 0rem 3rem;
+    background-color: #000;
+    display: flex;
+    justify-content: center;
 }
 
 .search {
-    background-color: aliceblue;
-    width: max-content;
-    border-radius: 0.5rem;
-    padding-left: 1rem;
-    padding: 0.05rem;
-    display: inline-flex;
-    gap: 1rem;
-    margin-top: 2rem;
-    align-items: center;
+  padding: 1rem 2rem;
+  display: flex;
+  align-items: center;
+  
 }
 
 .search input {
     border: none;
-    font-size: large;
+    font-size:;
+    padding: .5rem;
     background-color: aliceblue;
 }
-
-.centertext {
-    display: grid;
-    margin-top: 18rem;
-    place-self: center;
-    color: aliceblue;
+.search button{
+  height: 2.5rem;
+  margin-left: -1px;
+  border-radius: 0 .3rem .3rem 0!important;
 }
-
-.recommended {
-    transform: translateY(-8rem);
-}
-
 .recommended .alignimg {
     margin: 0rem 2rem;
     display: grid;
-    place-items: center;
-    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+    grid-template-columns: 1fr 1fr;
 }
 
 .alignimg img {
@@ -72,50 +44,57 @@
     border-radius: 10px;
 }
 
-.slider {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 2rem;
-    margin: 2rem;
-}
 
 .catagory {
     width: max-content;
-    margin-left: 5rem;
     display: inline-flex;
     align-items: center;
     gap: 1rem;
-    margin: 2rem;
+    margin: 1rem 1rem;
+    display: none;
 }
-
-.container-fluid .divide {
+.movies-list-container{
+  background-color: white;
+}
+.section-title{
+  margin-inline: 1rem;
+  margin-block: 0 1rem;
+  padding-block: 2rem .5rem;
+  border-bottom: 1px solid gray;
+  color: #333;
+  font-weight: bold;
+}
+.movies-list {
     display: grid;
-    align-self: center;
-    place-items: center;
-    gap: 1rem;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    justify-items: center;
+    gap: .5rem 0;
+    grid-template-columns: 1fr 1fr;
+    background-color: white;
 }
 
-.divide .col {
-    height: 22rem;
+.movie {
+  display: grid;
+  justify-items: ;
+  align-items: space;
+  gap: 1rem;
+  padding: 1rem;
 }
 
-.img-fluid {
-    width: 90%;
-    height: 90%;
-    border-radius: 10px;
-    object-fit: cover;
+.movie img{
+  height: 15rem;
+  border-radius: .3rem;
+  width: 100%;
 }
 
-.col .card-body {
-    text-align: start;
-    padding: 0.5rem 1rem;
+.movie .card-body {
+  text-align: center;
 }
 
-.col .card-body .list {
-    display: flex;
-    justify-content: space-between;
+.movie .card-body .list .card-text {
+  text-align: center;
+  color: gray;
+  font-size: .85rem;
+  margin-block: rem 0;
 }
 
 .footer {
@@ -123,4 +102,89 @@
     margin-top: 10em;
     font-size: x-large;
     border-top: 2px solid #333;
+}
+.slider {
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+  overflow: hidden;
+  height: 15rem;
+}
+
+.slides {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.slide {
+  position: relative;
+  min-width: 100%;
+  height: 15rem;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  color: #fff;
+  text-align: ;
+}
+.content {
+  padding: 2rem;
+}
+.content p{
+  font-size: .8rem;
+  font-weight: 300;
+  font-style: italic;
+}
+.background-image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6); /* Dark overlay to add opacity effect */
+  z-index: 2;
+}
+
+.content {
+  position: relative;
+  z-index: 3;
+}
+
+h2 {
+  font-size: 24px;
+  margin: 0;
+}
+
+p {
+  font-size: 16px;
+  margin: 5px 0 0;
+}
+
+.dots {
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+  z-index: 4;
+}
+
+.dot {
+  width: 20px;
+  height: 5px;
+  background-color: #ddd;
+  border-radius: 2px;
+  cursor: pointer;
+}
+
+.dot.active {
+  background-color: #77a2e7;
 }
