--- a/public/style.css
+++ b/public/style.css
@@ -1,19 +1,35 @@
 .container-fluid {
     padding: 0;
     margin: 0;
-    background-color: #e7e5e5;
+    background-color: #fff;
     box-shadow: 1px 2px 10px 1px #f5f5f5;
 }
-
-.navbar {
-    display: grid;
-    background-color: #000;
-    display: flex;
-    justify-content: center;
+.header {
+  position: relative;
 }
+.navbar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+    display: flex;
+    background-color: ;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+}
+.brand{
+  font-size: 2rem;
+  color: white;
+  font-weight: bold;
 
+}
+.theme-color{
+  color: rgb(255, 191, 0);
+}
 .search {
-  padding: 1rem 2rem;
   display: flex;
   align-items: center;
   
@@ -21,15 +37,38 @@
 
 .search input {
     border: none;
+    width: 15rem;
     font-size:;
-    padding: .5rem;
-    background-color: aliceblue;
+    padding: 0 .5rem;
+    height: 2rem;
+    background-color: white;
+    border-radius: 3px;
+    border: 1px solid white;
 }
 .search button{
-  height: 2.5rem;
-  margin-left: -1px;
-  border-radius: 0 .3rem .3rem 0!important;
+  display: grid;
+  place-content: center;
+  font-weight: bold;
+  border: 1px solid white;
+  height: 2rem;
+  padding-inline: 1rem;
+  margin-left: 5px;
+  border-radius: 3px!important;
+  color: black;
+  background-color: rgb(255, 191, 0)!important;
 }
+
+.watch-now-btn{
+  padding: .5rem 1.25rem;
+  background-color: rgb(255, 191, 0);
+  color: #333;
+  border: none;
+  border-radius: 5px;
+  font-weight: bold;
+  margin: 1rem 0;
+  font-family: inherit;
+}
+
 .recommended .alignimg {
     margin: 0rem 2rem;
     display: grid;
@@ -55,33 +94,46 @@
 }
 .movies-list-container{
   background-color: white;
+  /* max-width: 75rem; */
+
+  padding: 2rem 15rem;
+  padding: 2rem 15%;
+  margin: auto;
+}
+.movies-list-container:nth-child(3){
+  background-color: rgb(248, 248, 248);
+
 }
 .section-title{
   margin-inline: 1rem;
-  margin-block: 0 1rem;
-  padding-block: 2rem .5rem;
+  margin-block: 0 2rem;
+  padding-block: 2rem 1rem;
   border-bottom: 1px solid gray;
   color: #333;
   font-weight: bold;
+  font-size: 2rem;
 }
 .movies-list {
-    display: grid;
-    justify-items: center;
-    gap: .5rem 0;
-    grid-template-columns: 1fr 1fr;
-    background-color: white;
+  display: grid;
+  justify-items: center;
+  gap: .5rem 0;
+  
+  grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
+  background-color: ;
 }
-
-.movie {
+  
+  .movie {
+  margin-bottom: 1rem;
   display: grid;
   justify-items: ;
-  align-items: space;
+  align-items: space-between;
   gap: 1rem;
-  padding: 1rem;
+  object-fit: cover;
+  width: 12rem;
 }
 
 .movie img{
-  height: 15rem;
+  height: 18rem;
   border-radius: .3rem;
   width: 100%;
 }
@@ -108,7 +160,7 @@
   width: 100%;
   max-width: 100%;
   overflow: hidden;
-  height: 15rem;
+  height: 75vh;
 }
 
 .slides {
@@ -119,7 +171,7 @@
 .slide {
   position: relative;
   min-width: 100%;
-  height: 15rem;
+  height: 75vh;
   display: flex;
   align-items: center;
   justify-content: start;
@@ -127,12 +179,15 @@
   text-align: ;
 }
 .content {
-  padding: 2rem;
+  margin-top: 5rem;
+  
+  padding: 2rem 15%;
+}
+.content h2 {
+  font-size: 2.618rem;
 }
 .content p{
-  font-size: .8rem;
-  font-weight: 300;
-  font-style: italic;
+  
 }
 .background-image {
   position: absolute;
@@ -148,7 +203,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.6); /* Dark overlay to add opacity effect */
+  background-color: rgba(0, 0, 0, .8); /* Dark overlay to add opacity effect */
   z-index: 2;
 }
 
@@ -187,4 +242,25 @@ p {
 
 .dot.active {
   background-color: #77a2e7;
+}
+
+
+@media (max-width: 570px) {
+  .movies-list-container{
+    padding-inline: 1rem;
+    
+  }
+  .movies {
+
+  }
+}
+
+  @media (max-width: 640px) {
+  .movies-list-container{
+    /* padding-inline: 1rem; */
+  }
+  .movies-list{
+    /* grid-template-columns: 1fr 1fr; */
+    /* gap: 1rem; */
+  }
 }
